# agentic-recruitment-system

./: .gitignore
backend/: pyproject.toml
backend/src/agents/: __init__.py  base.py  bias_auditor.py  jd_analyzer.py  matcher.py  orchestrator.py  ranker.py  resume_parser.py  shortlister.py  test_evaluator.py  test_generator.py
backend/src/api/: __init__.py  main.py
backend/src/core/: llm.py
backend/src/schemas/: job.py  messages.py
backend/src/utils/: __init__.py  llm.py  pdf_extractor.py
backend/tests/: test_pipeline.py
frontend/: index.html  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: BiasAuditPanel.jsx  CandidateTable.jsx  PipelineStepper.jsx  ResumeUploader.jsx  Sidebar.jsx  TestingCenter.jsx  Toast.jsx
frontend/src/services/: api.js
